# docs/swagger.yaml
@@ -1,4 +1,82 @@
+basePath: /
 definitions:
+  http.CreatePRRequest:
+    properties:
+      author_id:
+        description: '@Example: user123'
+        example: user123
+        type: string
+      pull_request_id:
+        description: '@Example: pr-123'
+        example: pr-123
+        type: string
+      pull_request_name:
+        description: '@Example: "Add new feature"'
+        example: Add new feature
+        type: string
+    type: object
+  http.CreateTeamRequest:
+    properties:
+      members:
+        items:
+          $ref: '#/definitions/schemas.User'
+        type: array
+      name:
+        description: '@Example: backend'
+        example: backend
+        type: string
+    type: object
+  http.LoginRequest:
+    properties:
+      password:
+        description: '@Example: admin'
+        example: admin
+        type: string
+      user_id:
+        description: '@Example: admin'
+        example: admin
+        type: string
+    type: object
+  http.LoginResponse:
+    properties:
+      role:
+        description: '@Example: admin'
+        example: admin
+        type: string
+      token:
+        description: '@Example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...'
+        example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+        type: string
+    type: object
+  http.MergePRRequest:
+    properties:
+      pull_request_id:
+        description: '@Example: pr-123'
+        example: pr-123
+        type: string
+    type: object
+  http.ReassignPRRequest:
+    properties:
+      old_user_id:
+        description: '@Example: user123'
+        example: user123
+        type: string
+      pull_request_id:
+        description: '@Example: pr-123'
+        example: pr-123
+        type: string
+    type: object
+  http.SetUserActiveRequest:
+    properties:
+      is_active:
+        description: '@Example: true'
+        example: true
+        type: boolean
+      user_id:
+        description: '@Example: user123'
+        example: user123
+        type: string
+    type: object
   schemas.Team:
     properties:
       members:
@@ -19,12 +97,39 @@ definitions:
       username:
         type: string
     type: object
+host: localhost:8080
 info:
   contact: {}
-  description: Service for assigning reviewers to Pull Requests
-  title: ReviewAssigner
+  description: API for assigning code reviewers to pull requests
+  title: Review Assigner API
   version: "1.0"
 paths:
+  /auth/login:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Login data
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/http.LoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/http.LoginResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Логин для получения JWT
+      tags:
+      - Auth
   /health:
     get:
       produces:
@@ -49,8 +154,7 @@ paths:
         name: request
         required: true
         schema:
-          additionalProperties: true
-          type: object
+          $ref: '#/definitions/http.CreatePRRequest'
       produces:
       - application/json
       responses:
@@ -69,6 +173,8 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - BearerAuth: []
       summary: Создать PR
       tags:
       - PullRequests
@@ -82,8 +188,7 @@ paths:
         name: request
         required: true
         schema:
-          additionalProperties: true
-          type: object
+          $ref: '#/definitions/http.MergePRRequest'
       produces:
       - application/json
       responses:
@@ -97,6 +202,8 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - BearerAuth: []
       summary: Merge PR
       tags:
       - PullRequests
@@ -110,8 +217,7 @@ paths:
         name: request
         required: true
         schema:
-          additionalProperties: true
-          type: object
+          $ref: '#/definitions/http.ReassignPRRequest'
       produces:
       - application/json
       responses:
@@ -130,9 +236,26 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - BearerAuth: []
       summary: Reassign reviewer
       tags:
       - PullRequests
+  /stats:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Получить статистику назначений
+      tags:
+      - Statistics
   /team/add:
     post:
       consumes:
@@ -140,10 +263,10 @@ paths:
       parameters:
       - description: Team data
         in: body
-        name: team
+        name: request
         required: true
         schema:
-          $ref: '#/definitions/schemas.Team'
+          $ref: '#/definitions/http.CreateTeamRequest'
       produces:
       - application/json
       responses:
@@ -157,6 +280,8 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - BearerAuth: []
       summary: Создать команду
       tags:
       - Teams
@@ -164,6 +289,7 @@ paths:
     get:
       parameters:
       - description: Team name
+        example: '"backend"'
         in: query
         name: team_name
         required: true
@@ -180,6 +306,8 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - BearerAuth: []
       summary: Получить команду
       tags:
       - Teams
@@ -187,6 +315,7 @@ paths:
     get:
       parameters:
       - description: User ID
+        example: '"user123"'
         in: query
         name: user_id
         required: true
@@ -204,6 +333,8 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - BearerAuth: []
       summary: Получить PR пользователя
       tags:
       - Users
@@ -217,8 +348,7 @@ paths:
         name: request
         required: true
         schema:
-          additionalProperties: true
-          type: object
+          $ref: '#/definitions/http.SetUserActiveRequest'
       produces:
       - application/json
       responses:
@@ -232,7 +362,15 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - BearerAuth: []
       summary: Установить активность пользователя
       tags:
       - Users
+securityDefinitions:
+  BearerAuth:
+    description: Type "Bearer" followed by a space and JWT token.
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
